--- a/README.org
+++ b/README.org
@@ -70,6 +70,18 @@ its content.
 
 ** Enero 2025
 
+*** 03-Ene-25
++ [[https://inria.hal.science/hal-04859512/file/jfla2025-final84.pdf][Décomposition algébrique cylindrique en Coq/Rocq]]. ~ Quentin Vermande. #ITP #Coq #Rocq #Math
++ [[https://inria.hal.science/hal-04859469/document][Formalizing adhesive category theory in Rocq]]. ~ Samuel Arsac, Russell Harmer, Damien Pous. #ITP #Rocq
++ [[https://inria.hal.science/hal-04859533/document][Vérification de bout en bout d’une fonction de bibliothèque mathématique]]. ~ Paul Geneau de Lamarlière. #ITP #Coq #Rocq #Math
++ [[https://inria.hal.science/hal-04859400/file/jfla2025-final4.pdf][Safe external calls from formally verified functional code: exiting the monad, and a BDD case study]]. ~ David Monniaux, Sylvain Boulmé. #ITP #Coq #Rocq
++ [[https://arxiv.org/abs/2412.19826][Modular probabilistic programming with algebraic effects]]. ~ Oliver Goldstein, Ohad Kammar. #Haskell #FunctionalProgramming
++ [[https://www.cs.columbia.edu/~sedwards/classes/2024/4995-fall/reports/Convex_Hull-report.pdf][Parallel QuickHull algorithm in Haskell]]. ~ George Morgulis, Henry Lin. #Haskell #FunctionalProgramming
++ [[https://www.cs.columbia.edu/~sedwards/classes/2024/4995-fall/reports/tsp-sat-report.pdf][Parallel SAT solver]]. ~ Yixuan Li, Jiaqian Li, Phoebe Wang. #Haskell #FunctionalProgramming
++ [[https://inria.hal.science/hal-04859464/file/jfla2025-final54.pdf][Storable types: free, absorbing, custom]]. ~ Basile Clément, Camille Noûs, Gabriel Scherer. #OCaml #FunctionalProgramming
++ [[https://inria.hal.science/hal-04859446/document][Typechecking of overloading in programming languages and mechanized mathematics]]. ~ Arthur Charguéraud, Martin Bodin, Louis Riboulet. #OCaml #FunctionalProgramming
++ [[https://www.diva-portal.org/smash/get/diva2:1923801/FULLTEXT01.pdf][Applying machine learning to number-theoretical data (A focus on class groups of imaginary quadratic fields)]]. ~ Hugo Sträng. #AI #MachineLearning #Math
+
 *** 01-Ene-25
 + [[https://leanfirststeps.blogspot.com/2024/12/21-induction.html][Lean: First steps (21 - Simple induction)]]. ~ Tariq Rashid (@rzeta0@mastodon.social). #ITP #LeanProver #Lean4 #Math
 + [[https://intapi.sciendo.com/pdf/10.2478/forma-2024-0008][Formal proof of transcendence of the number e (Part I)]]. ~ Yasushige Watase. #ITP #Mizar #Math
